# paste_image

./: Cargo.toml
src/: escape.rs  main.rs  main1.rs
