[package]
name = "paste_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
#gdl={git = "https://github.com/silvia-odwyer/gdl"}
#gdl = "0.2.6"
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6"
#imageproc = "0.23.0"
#image = "0.24.3"
#rusttype = "0.9.2"
once_cell = "1.15.0"
[profile.release]
opt-level='z'
lto=true

